fixed vertical overflow

--- a/src/styles/pages/_create.scss
+++ b/src/styles/pages/_create.scss
@@ -1,5 +1,5 @@
 .create-page {
-    height: calc(100vh - 62.4px);
+    // height: calc(100vh - 62.4px);
     display: flex;
     flex-direction: column;
 
